fixed spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,9 @@ body {
     font-size: 18px;
 
 }
-
+.container {
+    align: center;
+}
 .header {
     background: #ebebeb;
     text-align: center;
@@ -29,14 +31,14 @@ body {
     text-align: center;
     float: left;
     margin-top: 15px;
+    height: 355px;
 }
 
 .aside{
     background: #ebebeb;
     text-align: center;
-    padding-bottom: 322px;
-    padding-right: 165px;
-    padding-left: 166px;
+    height: 390px;
+    width: 388px;
     margin: 15px 0px 0px 15px;
     float: left;
 }
@@ -51,7 +53,7 @@ body {
     color: #ebebeb;
     background: #777;
     text-align: center;
-    padding-bottom: 40px;
+    height: 300px;
     
 }
 
